# image_processor

./: BMP.cpp  BMP.h  Blur.cpp  Blur.h  CMakeLists.txt  ChannelWiseFilter.cpp  ChannelWiseFilter.h  CompositeFilter.cpp  CompositeFilter.h  ConvFilter.cpp  ConvFilter.h  CropFilter.cpp  CropFilter.h  Crystallize.cpp  Crystallize.h  EdgeDetectionFilter.cpp  EdgeDetectionFilter.h  Filter.h  GrayscaleFilter.cpp  GrayscaleFilter.h  Image.cpp  Image.h  NegativeFilter.cpp  NegativeFilter.h  Parser.cpp  Parser.h  SharpeningFilter.h  Threshold.cpp  Threshold.h  image_processor.cpp  test_blur.cpp  test_crop.cpp  test_crystallize.cpp  test_edge.cpp  test_grayscale.cpp  test_negative.cpp  test_parse.cpp  test_reading_writing.cpp  test_sharp.cpp
